test/tests/stages/14_pointers/invalid_types/address_of_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  int
  identifier(y)
  =
  const int(0)
  ;
  int
  *
  identifier(ptr)
  =
  &
  (
  identifier(x)
  =
  identifier(y)
  )
  ;
  return
  const int(0)
  ;
  }
